@@ -7,6 +7,9 @@
       UPGRADE NOTE: run the command "migrate" to fix the issue, even if you have
       already migrated (a new migration "0156_v2_6_12__fix_hatbricks.py" should be performed).
     # The code has been fixed to accept a settings 'LOGIN_URL' as an URL (it may be necessary to use a SSO).
+    # Apps:
+        * Billing :
+            - No HeaderFilter for 'TemplateBase' was populated (only useful if you use recurrent documents).
 
 
 == Version 2.6.11 ==
